// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composables > useSecretContext > should create a new CredentialsBinding manifest with defaults 1`] = `
{
  "apiVersion": "security.gardener.cloud/v1alpha1",
  "credentialsRef": {
    "apiVersion": "v1",
    "kind": "Secret",
    "name": "",
    "namespace": "garden-foo",
  },
  "kind": "CredentialsBinding",
  "metadata": {
    "name": "",
    "namespace": "garden-foo",
  },
  "provider": {
    "type": "",
  },
}
`;

exports[`composables > useSecretContext > should set CredentialsBinding manifest 1`] = `
{
  "apiVersion": "security.gardener.cloud/v1alpha1",
  "credentialsRef": {
    "apiVersion": "v1",
    "kind": "Secret",
  },
  "kind": "CredentialsBinding",
  "metadata": {
    "name": "foo",
    "namespace": "garden-foo",
  },
  "provider": {
    "type": "aws",
  },
}
`;
